--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,3 +7,10 @@ a:hover {
   font-weight: normal !important;
   text-decoration: underline solid blue;
 }
+
+#logo {
+  max-width:110px;
+  -webkit-border-radius:150px;
+  -moz-border-radius:150px;
+  border-radius:150px
+}
