--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,8 @@
 
 {% seo %}
     <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
+    <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" data-auto-replace-svg="nest"></script>
     {% include head-custom.html %}
   </head>
   <body>
@@ -18,7 +20,17 @@
           <img id="logo" src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %}
 
-        <p>{{ site.description | default: site.github.project_tagline }}</p>
+        <p>{{ site.description | default: site.github.project_tagline }}</a>
+        <a><i class="fab fa-envelope"></i>Email</a>
+        <a><i class="fab fa-twitter-square"></i> Twitter</a>
+        <a><i class="fab fa-linkedin"></i> Linkedin</a>
+        <hr>
+        <a><i class="ai ai-orcid ai-3x"></i> ORCID</a>
+        <a><i class="ai ai-scopuse ai-2x"></i> Scopus</a>
+        <a><i class="ai ai-google-scholar-square ai-3x"></i> Google Scholar</a>
+        <a><i class="ai ai-researchgate ai-3x"></i> ResearchGate</a>
+        <a><i class="ai ai-dblp"></i> dblp</a>
+        <a class="alink"><i class="fab fa-github"></i> GitHub</a>
 
         {% if site.github.is_project_page %}
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
@@ -46,6 +58,7 @@
         <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p><small>Graziano Blasilli &mdash; All rights reserved. 2021</a></small></p>
       </footer>
     </div>
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
