--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,18 +22,19 @@
 
         <p>{{ site.description | default: site.github.project_tagline }}</a>
         <p>
-          <a class="alink"><i class="fas fa-envelope"></i>"></i>Email</a><br>
+          <a class="alink"><i class="fas fa-envelope"></i>Email</a><br>
           <a class="alink"><i class="fab fa-twitter-square"></i> Twitter</a><br>
           <a class="alink"><i class="fab fa-linkedin"></i> Linkedin</a>
-          <hr>
-          <a class="alink"><i class="ai ai-orcid ai-2x"></i> ORCID</a><br>
-          <a class="alink"><i class="ai ai-scopus ai-2x"></i> Scopus</a><br>
+          <br>
+          <a class="alink"><i class="ai ai-orcid"></i> ORCID</a><br>
+          <a class="alink"><i class="ai ai-scopus"></i> Scopus</a><br>
           <a class="alink"><i class="ai ai-google-scholar-square"></i> Google Scholar</a><br>
           <a class="alink"><i class="ai ai-researchgate"></i> ResearchGate</a><br>
           <a class="alink"><i class="ai ai-dblp"></i> dblp</a><br>
           <a class="alink"><i class="fab fa-github"></i> GitHub</a><br>
         </p>
 
+        <!--
         {% if site.github.is_project_page %}
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
         {% endif %}
@@ -41,6 +42,7 @@
         {% if site.github.is_user_page %}
         <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
         {% endif %}
+        -->
 
         {% if site.show_downloads %}
         <ul class="downloads">
@@ -59,8 +61,7 @@
         {% if site.github.is_project_page %}
         <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-        <p><small>Graziano Blasilli &mdash; All rights reserved. 2021</a></small></p>
+        <p><small>2021 Graziano Blasilli &mdash; All rights reserved.</a></small></p>
       </footer>
     </div>
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
