--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,19 +22,19 @@
 
         <p>{{ site.description | default: site.github.project_tagline }}</a>
         <p>
-          <a class="alink"><i class="fas fa-envelope"></i>Email</a><br>
-          <a class="alink"><i class="fab fa-twitter-square"></i> Twitter</a><br>
-          <a class="alink"><i class="fab fa-linkedin"></i> Linkedin</a>
+          <a class="alink" target="_blank" href="mailto:blasilli at diag.uniroma1.it"><i class="fas fa-envelope"></i>Email</a><br>
+          <a class="alink" target="_blank" href="https://twitter.com/GrazianoBlas"><i class="fab fa-twitter-square"></i> Twitter</a><br>
+          <a class="alink" target="_blank" href="https://www.linkedin.com/in/blasilli/"><i class="fab fa-linkedin"></i> Linkedin</a>
         </p>
         <p>
-          <a class="alink"><i class="ai ai-orcid"></i> ORCID</a><br>
-          <a class="alink"><i class="ai ai-scopus"></i> Scopus</a><br>
-          <a class="alink"><i class="ai ai-google-scholar-square"></i> Google Scholar</a><br>
-          <a class="alink"><i class="ai ai-researchgate"></i> ResearchGate</a><br>
-          <a class="alink"><i class="ai ai-dblp"></i> dblp</a><br>
+          <a class="alink" target="_blank" href="https://orcid.org/0000-0003-3339-6403"><i class="ai ai-orcid"></i> ORCID</a><br>
+          <a class="alink" target="_blank" href="https://www2.scopus.com/authid/detail.uri?authorId=57202603687"><i class="ai ai-scopus"></i> Scopus</a><br>
+          <a class="alink" target="_blank" href="https://scholar.google.it/citations?user=DaXZ6acAAAAJ"><i class="ai ai-google-scholar-square"></i> Google Scholar</a><br>
+          <a class="alink" target="_blank" href="https://www.researchgate.net/profile/Graziano-Blasilli"><i class="ai ai-researchgate"></i> ResearchGate</a><br>
+          <a class="alink" target="_blank" href="https://dblp.org/pid/219/7390"><i class="ai ai-dblp"></i> dblp</a><br>
         </p>
         <p>
-          <a class="alink"><i class="fab fa-github"></i> GitHub</a><br>
+          <a class="alink" target="_blank" href="https://github.com/blasilli/"><i class="fab fa-github"></i> GitHub</a><br>
         </p>
 
         <!--
