--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -68,5 +68,14 @@
       </footer>
     </div>
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PGDLTGVM20"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-PGDLTGVM20');
+    </script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
   </body>
 </html>
