--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,6 +3,12 @@
 
 @import "{{ site.theme }}";
 
+
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+body {
+  font-family: 'Lato', sans-serif;
+}
+
 a {
   cursor: pointer;
   color: #2d7788;
@@ -31,7 +37,7 @@ a {
   li {
     padding-bottom: 1em;
   }
-  
+
   .pt {
     font-weight: normal !important;
     color: #2d7788;
@@ -47,7 +53,7 @@ a {
     font-weight: 200;
     font-style: normal;
     font-size: 0.9em;
-    color: #97AAC3;
+    //color: #97AAC3;
     
     &:after{
       content: "\a" !important;
