--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -50,6 +50,7 @@ a {
   }
   
   .pa {
+    font-weight: 300;
     font-size: 0.9em;
     //color: #97AAC3;
     
@@ -61,7 +62,7 @@ a {
   
   .pv {
     font-style: italic;
-    //font-weight: 100;
+    font-weight: 300;
     font-size: 0.9em;
   }
   
