--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
     <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" data-auto-replace-svg="nest"></script>
+
+    <meta property="og:title" content="{{site.title}}" />
+    <meta property="og:description" content="{{site.shortDescription}}" />
+    <meta property="og:image" content="{{site.logo | relative_url}}" />
     {% include head-custom.html %}
   </head>
   <body>
