--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -50,7 +50,8 @@ a {
   }
   
   .pa {
-    font-weight: 300;
+    font-style: italic;
+    font-weight: 400;
     font-size: 0.9em;
     //color: #97AAC3;
     
