--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,7 +1,9 @@
 <!-- OG -->
 <meta property="og:title" content="{{site.title}}" />
 <meta property="og:description" content="{{site.shortDescription}}" />
-<meta property="og:image" content="{{site.logo | relative_url}}" />
+<meta property="og:type" content="website" />
+<meta property="og:image:type" content="image/jpeg">
+<meta property="og:image" content="{{site.logoSmall | relative_url}}" />
 <!-- Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-PGDLTGVM20"></script>
 <script>
