--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
           <img id="me" src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %}
 
-        <p>{{ site.description | default: site.github.project_tagline }}</a>
+        <!-- <p>{{ site.description | default: site.github.project_tagline }}</a> -->
         <p>
           <a class="alink" target="_blank" href="mailto:blasilli at diag.uniroma1.it"><i class="fas fa-envelope"></i>Email</a><br>
           <a class="alink" target="_blank" href="https://twitter.com/GrazianoBlas"><i class="fab fa-twitter-square"></i> Twitter</a><br>
