--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
         {% endif %}
 
         <!-- <p>{{ site.description | default: site.github.project_tagline }}</a> -->
-        <p>
+        <p style="margin-top: 2em;">
           <a class="alink" target="_blank" href="mailto:blasilli at diag.uniroma1.it"><i class="fas fa-envelope"></i>Email</a><br>
           <a class="alink" target="_blank" href="https://twitter.com/GrazianoBlas"><i class="fab fa-twitter-square"></i> Twitter</a><br>
           <a class="alink" target="_blank" href="https://www.linkedin.com/in/blasilli/"><i class="fab fa-linkedin"></i> Linkedin</a>
