--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -20,11 +20,11 @@ a {
   }
 }
 
-#me_old {
+#me {
   max-width:110px;
-  -webkit-border-radius:150px;
-  -moz-border-radius:150px;
-  border-radius:150px
+  //-webkit-border-radius:150px;
+  //-moz-border-radius:150px;
+  //border-radius:150px
 }
 
 .alink {
