--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -9,6 +9,14 @@ body {
   font-family: 'Lato', sans-serif;
 }
 
+.wrapper {
+  width: 1000px;
+}
+
+section {
+  width: 650px;
+}
+
 a {
   cursor: pointer;
   color: #2d7788;
