--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -9,6 +9,7 @@ body {
   font-family: 'Lato', sans-serif;
 }
 
+/*
 .wrapper {
   width: 1000px;
 }
@@ -16,6 +17,7 @@ body {
 section {
   width: 650px;
 }
+*/
 
 a {
   cursor: pointer;
