--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,4 +1,5 @@
 <!-- OG -->
+<meta property="og:title" content="Graziano Blasilli personal webpage." />
 <meta property="og:type" content="website" />
 <meta property="og:image:type" content="image/jpeg">
 <meta property="og:image" content="{{site.logoSmall | relative_url}}" />
