--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -4,10 +4,10 @@
 <meta property="og:image:type" content="image/jpeg">
 <meta property="og:image" content="{{site.logoSmall | relative_url}}" />
 <!-- Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-PGDLTGVM20"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id={{site.google_analytics}}"></script>
 <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'G-PGDLTGVM20');
+    gtag('config', '{{site.google_analytics}}');
 </script>
